--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="card">
-          <img src="{{user.photoUrl}}" alt="" class="card-img-top img-thumbnail">
+          <img src="{{photoUrl}}" alt="" class="card-img-top img-thumbnail">
           <div class="card-body">
             <div>
               <strong>Location:</strong>
@@ -58,7 +58,7 @@
               </form>
             </tab>
             <tab heading="Edit Photos">
-              <p>Photo edit will go here</p>
+              <app-photo-editor [photos]="user.photos" (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
             </tab>
           </tabset>
         </div>
